Support JAX-RS cookie param locator binding