@@ -16,19 +16,18 @@
 package io.micronaut.jaxrs.processor;
 
 import io.micronaut.core.annotation.AnnotationValue;
-import io.micronaut.core.annotation.AnnotationValueBuilder;
 import io.micronaut.core.annotation.Internal;
 import org.jspecify.annotations.NonNull;
-import io.micronaut.http.annotation.CookieValue;
 import io.micronaut.inject.annotation.NamedAnnotationMapper;
 import io.micronaut.inject.visitor.VisitorContext;
 
 import java.lang.annotation.Annotation;
-import java.util.Collections;
 import java.util.List;
 
 /**
- * Maps the JAX-RS {@code CookieParam} annotation.
+ * Defers JAX-RS {@code CookieParam} mapping to {@link JaxRsTypeElementVisitor},
+ * which keeps server parameters on {@code CookieParam} and maps client parameters
+ * to Micronaut cookie metadata.
  *
  * @author graemerocher
  * @since 1.0
@@ -43,11 +42,6 @@ public class CookieParamMapper implements NamedAnnotationMapper {
 
     @Override
     public List<AnnotationValue<?>> map(AnnotationValue<Annotation> annotation, VisitorContext visitorContext) {
-
-        final AnnotationValueBuilder<CookieValue> builder = AnnotationValue.builder(CookieValue.class);
-        annotation.stringValue().ifPresent(builder::value);
-        return Collections.singletonList(
-            builder.build()
-        );
+        return List.of();
     }
 }
